--- a/docs/api_examples/template_path/project_templates/nbconvert/templates/classic_clone/static/style.css
+++ b/docs/api_examples/template_path/project_templates/nbconvert/templates/classic_clone/static/style.css
@@ -10570,14 +10570,14 @@ ul#new-menu {
   }
 }
 @media print {
-  #texteditor-backdrop #texteditor-container .CodeMirror-gutter,
-  #texteditor-backdrop #texteditor-container .CodeMirror-gutters {
+  #texteditor-backdrop #texteditor-container .cm-gutter,
+  #texteditor-backdrop #texteditor-container .cm-gutters {
     background-color: #fff;
   }
 }
 @media not print {
-  #texteditor-backdrop #texteditor-container .CodeMirror-gutter,
-  #texteditor-backdrop #texteditor-container .CodeMirror-gutters {
+  #texteditor-backdrop #texteditor-container .cm-gutter,
+  #texteditor-backdrop #texteditor-container .cm-gutters {
     background-color: #fff;
   }
 }
@@ -10589,7 +10589,7 @@ ul#new-menu {
     box-shadow: 0px 0px 12px 1px rgba(87, 87, 87, 0.2);
   }
 }
-.CodeMirror-dialog {
+.cm-dialog {
   background-color: #fff;
 }
 /*!
@@ -11025,11 +11025,11 @@ div.input_area > div.highlight > pre {
  * respect to the rest of the text.  The user should select a better font.
  * See: https://github.com/ipython/ipython/issues/1503
  *
- * .CodeMirror span {
+ * .cm-editor span {
  *      vertical-align: bottom;
  * }
  */
-.CodeMirror {
+.cm-editor {
   line-height: 1.21429em;
   /* Changed from 1em to our global default */
   font-size: 14px;
@@ -11038,43 +11038,43 @@ div.input_area > div.highlight > pre {
   background: none;
   /* Changed from white to allow our bg to show through */
 }
-.CodeMirror-scroll {
+.cm-scroller {
   /*  The CodeMirror docs are a bit fuzzy on if overflow-y should be hidden or visible.*/
   /*  We have found that if it is visible, vertical scrollbars appear with font size changes.*/
   overflow-y: hidden;
   overflow-x: auto;
 }
-.CodeMirror-lines {
+.cm-line {
   /* In CM2, this used to be 0.4em, but in CM3 it went to 4px. We need the em value because */
   /* we have set a different line-height and want this to scale with that. */
   /* Note that this should set vertical padding only, since CodeMirror assumes
-       that horizontal padding will be set on CodeMirror pre */
+       that horizontal padding will be set on cm-editor pre */
   padding: 0.4em 0;
 }
-.CodeMirror-linenumber {
+.cm-lineNumbers {
   padding: 0 8px 0 4px;
 }
-.CodeMirror-gutters {
+.cm-gutters {
   border-bottom-left-radius: 2px;
   border-top-left-radius: 2px;
 }
-.CodeMirror pre {
+.cm-editor pre {
   /* In CM3 this went to 4px from 0 in CM2. This sets horizontal padding only,
-    use .CodeMirror-lines for vertical */
+    use .cm-cursor for vertical */
   padding: 0 0.4em;
   border: 0;
   border-radius: 0;
 }
-.CodeMirror-cursor {
+.cm-cursor {
   border-left: 1.4px solid black;
 }
 @media screen and (min-width: 2138px) and (max-width: 4319px) {
-  .CodeMirror-cursor {
+  .cm-cursor {
     border-left: 2px solid black;
   }
 }
 @media screen and (min-width: 4320px) {
-  .CodeMirror-cursor {
+  .cm-cursor {
     border-left: 4px solid black;
   }
 }
