--- a/share/templates/lab/base.html.j2
+++ b/share/templates/lab/base.html.j2
@@ -26,7 +26,7 @@
 
 {% block input %}
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-     <div class="CodeMirror cm-s-jupyter">
+     <div class="cm-editor cm-s-jupyter">
 {{ cell.source | highlight_code(metadata=cell.metadata) | clean_html }}
      </div>
 </div>
