--- a/share/templates/classic/base.html.j2
+++ b/share/templates/classic/base.html.j2
@@ -269,7 +269,7 @@ var element = $('#{{ div_id }}');
 var element = $('#{{ div_id }}');
 </script>
 <script type="{{ datatype }}">
-{{ output.data[datatype] | json_dumps | escape_html_keep_quotes }}
+{{ output.data[datatype] | json_dumps | escape_html_script }}
 </script>
 </div>
 {%- endif %}
@@ -280,7 +280,7 @@ var element = $('#{{ div_id }}');
 {% set mimetype = 'application/vnd.jupyter.widget-state+json'%}
 {% if mimetype in nb.metadata.get("widgets",{})%}
 <script type="{{ mimetype }}">
-{{ nb.metadata.widgets[mimetype] | json_dumps | escape_html_keep_quotes }}
+{{ nb.metadata.widgets[mimetype] | json_dumps | escape_html_script }}
 </script>
 {% endif %}
 {%- endif %}
