--- a/share/templates/lab/base.html.j2
+++ b/share/templates/lab/base.html.j2
@@ -2,6 +2,12 @@
 {% from 'celltags.j2' import celltags %}
 {% from 'cell_id_anchor.j2' import cell_id_anchor %}
 
+{%- block body_loop -%}
+<div class="jp-Notebook jp-NotebookPanel-notebook" role="list" aria-label="Notebook Cells">
+{{super()}}
+</div>
+{%- endblock body_loop -%}
+
 {% block codecell %}
 {%- if not cell.outputs -%}
 {%- set no_output_class="jp-mod-noOutputs" -%}
