clear up input/output executions for screen reader. group inputs/outputs

--- a/share/templates/lab/base.html.j2
+++ b/share/templates/lab/base.html.j2
@@ -26,7 +26,7 @@
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
-<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputArea jp-Cell-inputArea" role="group" aria-label="cell input">
 {{ super() }}
 </div>
 </div>
@@ -49,18 +49,23 @@
 {% endblock output_group %}
 
 {% block outputs %}
-<div class="jp-OutputArea jp-Cell-outputArea">
+<div class="jp-OutputArea jp-Cell-outputArea" role="group" aria-label="cell outputs">
 {{ super() }}
 </div>
 {% endblock outputs %}
 
 {% block in_prompt -%}
-<div class="jp-InputPrompt jp-InputArea-prompt">
-    {%- if cell.execution_count is defined -%}
-        In&nbsp;[{{ cell.execution_count|replace(None, "&nbsp;") }}]:
-    {%- else -%}
-        In&nbsp;[&nbsp;]:
-    {%- endif -%}
+<div class="jp-InputPrompt-Group jp-InputPrompt jp-InputArea-prompt">
+    <a href="{{loop.index}}" id="jp-cellNumber-{{loop.index}}" class="jp-CellNumber visually-hidden" aria-describedby="jp-cellType-{{loop.index}} jp-executionCount-{{loop.index}}">Cell {{loop.index}}</a>
+    <span id="jp-executionCount-{{loop.index}}">
+            {%- if cell.execution_count is defined and cell.execution_count != None -%}
+            In<span aria-hidden="true">[</span>{{ cell.execution_count|replace(None, "&nbsp;") }}<span
+                aria-hidden="true">]:</span>
+            {%- else -%}
+            In<span aria-hidden="true">[</span>&nbsp;<span class="visually-hidden">unexecuted</span><span
+                aria-hidden="true">]:</span>
+            {%- endif -%}
+    </span>
 </div>
 {%- endblock in_prompt %}
 
@@ -80,9 +85,9 @@
     <div class="jp-OutputPrompt jp-OutputArea-prompt">
 {%- if output.output_type == 'execute_result' -%}
     {%- if cell.execution_count is defined -%}
-        Out[{{ cell.execution_count|replace(None, "&nbsp;") }}]:
+        Out<span aria-hidden="true">[</span>{{ cell.execution_count|replace(None, "&nbsp;") }}<span aria-hidden="true">]:</span>
     {%- else -%}
-        Out[&nbsp;]:
+        Out<span aria-hidden="true">[</span>&nbsp;<span class="visually-hidden">unexecuted</span><span aria-hidden="true">]:</span>
     {%- endif -%}
 {%- endif -%}
     </div>
@@ -98,6 +103,9 @@
     {{ self.output_area_prompt() }}
 {% endif %}
 {{ super() }}
+{% if not cell.outputs %}
+<span class="visually-hidden">Zero outputs displayed.</span>
+{% endif %}
 </div>
 {% endblock output %}
 
