Correct rst mimetype to text/x-rst

--- a/share/templates/rst/index.rst.j2
+++ b/share/templates/rst/index.rst.j2
@@ -45,7 +45,7 @@
 {% endblock stream %}
 
 {% block data_native %}
-{{ output.data['text/restructuredtext'] }}
+{{ output.data['text/x-rst'] }}
 {% endblock data_native %}
 
 {% block data_svg %}
